More Windows attempted fixes